file di progetto aggiornati
completato upload menu (stili da rivedere) con collapse che aprono le varie sezioni del listino
preparato form ordine per inserimento gruppo di prodotti con selettore quantità e pulsante aggiungi al carrello
Da correggere navbar (il toggle mobile non è responsive e non si apre) su tutte pagine
Aggiungere immagini per spezzare i contenuti
Rivedere colori di sfondo
Aggiungere logo e favicon
completare pagina chi siamo
finalizzare il javascript per i bottoni aggiungi al carrello (potrebbero scrivere su un json file che viene spedito poi x email tradotto in un formato testuale tramite il pulsante submit del form via php)
finalizzare il php per invio moduli (modulo generico in pagina contatti, modulo ordine e modulo prenotazione tavoli)
migliorare modulo prenotazione tavoli con date picker e time picker (il js registra la prenotazione su un json e la invia per e-mail) PREVEDERE INSERIMENTO DI UN GOOGLE CALENDAR X MOSTRARE LE PRENOTAZIONI - (il calendario verrà aggiornato manualmente dal proprietario del sito una volta rivevuta una prenotazione in modo da mostrare la disponibilità)

--- a/true_roots/chi-siamo.html
+++ b/true_roots/chi-siamo.html
@@ -29,7 +29,6 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -89,7 +88,9 @@
                 </div>
             </div>
             <h5>lorem lorem</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat praesentium ullam porro fuga aut atque temporibus reiciendis nobis repellat, vitae non facilis impedit ratione unde corporis quod, voluptatibus minima laboriosam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat praesentium ullam porro fuga aut atque
+                temporibus reiciendis nobis repellat, vitae non facilis impedit ratione unde corporis quod, voluptatibus
+                minima laboriosam.</p>
         </section>
     </main>
     <footer class="container-fluid">
