--- a/true_roots/cart.html
+++ b/true_roots/cart.html
@@ -57,50 +57,10 @@
         </nav>
     </header>
     <main>
-        <section class="jumbotron chi-siamo">
-            <div class="about">
-                <h1 class="display-4">True Roots</h1>
-                <p class="lead">Passione per la buona cucina</p>
-                <p>
-                    Tradizione e passione sono i valori portanti della nostra cucina. Visita la pagina del Menu per
-                    prenotare un tavolo o ordinare a domicilio.
-                </p>
-                <div>
-                    <a class="btn btn-primary btn-lg" href="menu.html" role="button">Menu</a>
-                </div>
-
-            </div>
-        </section>
-        <section class="features">
-            <!--sezione con descrizione delle peculiarità del locale-->
-            <div class="card-deck">
-                <div class="card">
-                    <img src="./assets/img/ristorante.jpg" class="card-img-top" alt="ristorante">
-                    <div class="card-body">
-                        <h5 class="card-title">Ampia sala interna</h5>
-                        <p class="card-text">Ampia e luminosa sala interna arredata in stile rustico.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/area-esterna.jpg" class="card-img-top" alt="area esterna ristorante">
-                    <div class="card-body">
-                        <h5 class="card-title">Spazio esterno</h5>
-                        <p class="card-text">SìAmpio spazio esterno per pranzi, cene e feste all'aperto.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/area-gioco.jpg" class="card-img-top" alt="area gioco">
-                    <div class="card-body">
-                        <h5 class="card-title">Spazio gioco</h5>
-                        <p class="card-text">I bambini saranno felici di giocare nel nostro spazio gioco attrezzato.</p>
-                    </div>
-                </div>
-            </div>
-            <h5>lorem lorem</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat praesentium ullam porro fuga aut atque
-                temporibus reiciendis nobis repellat, vitae non facilis impedit ratione unde corporis quod, voluptatibus
-                minima laboriosam.</p>
-        </section>
+        
+          <div id="label" class="text-center"></div>
+        
+          <div class="shopping-cart" id="shopping-cart"></div>
     </main>
     <footer class="container-fluid">
         <div>
@@ -133,5 +93,6 @@
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
 </body>
-
+<script src="./assets/js/Data.js"></script>
+<script src="./assets/js/cart.js"></script>
 </html>
