--- a/true_roots/contatti.html
+++ b/true_roots/contatti.html
@@ -39,6 +39,14 @@
                         <a class="nav-link" href="menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
+                        <a href="cart.html">
+                            <div class="cart">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <div id="cartAmount" class="cartAmount">0</div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="chi-siamo.html">Chi Siamo</a>
                     </li>
                     <li class="nav-item">
