--- a/true_roots/chi-siamo.html
+++ b/true_roots/chi-siamo.html
@@ -57,6 +57,8 @@
         </nav>
     </header>
     <main>
+        <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i
+                class="fa-solid fa-circle-arrow-up"></i>Top</button>
         <section class="jumbotron chi-siamo">
             <div class="about">
                 <h1 class="display-4">True Roots</h1>
@@ -75,24 +77,25 @@
             <!--sezione con descrizione delle peculiarità del locale-->
             <div class="card-deck">
                 <div class="card">
-                    <img src="./assets/img/ristorante.jpg" class="card-img-top" alt="ristorante">
+                    <img src="./assets/img/dentro.jpeg" class="card-img-top" alt="interno ristorante">
                     <div class="card-body">
                         <h5 class="card-title">Ampia sala interna</h5>
                         <p class="card-text">Ampia e luminosa sala interna arredata in stile rustico.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/img/area-esterna.jpg" class="card-img-top" alt="area esterna ristorante">
+                    <img src="./assets/img/fuori.jpg" class="card-img-top" alt="area esterna ristorante">
                     <div class="card-body">
                         <h5 class="card-title">Spazio esterno</h5>
-                        <p class="card-text">SìAmpio spazio esterno per pranzi, cene e feste all'aperto.</p>
+                        <p class="card-text">Ampio spazio esterno per pranzi, cene, ritrovi e feste all'aperto.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/img/area-gioco.jpg" class="card-img-top" alt="area gioco">
+                    <img src="./assets/img/giochi.jpg" class="card-img-top" alt="area gioco">
                     <div class="card-body">
                         <h5 class="card-title">Spazio gioco</h5>
-                        <p class="card-text">I bambini saranno felici di giocare nel nostro spazio gioco attrezzato.</p>
+                        <p class="card-text">I bambini saranno felici di giocare nel nostro spazio gioco attrezzato
+                            appositamente per loro con divertentissimi giochi ginfiabili.</p>
                     </div>
                 </div>
             </div>
