--- a/true_roots/contatti.html
+++ b/true_roots/contatti.html
@@ -91,6 +91,7 @@
             </form>
         </div>
     </main>
+    <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i class="fa-solid fa-circle-arrow-up"></i>Top</button>
     <footer class="container-fluid">
         <div>
             <p class="foot">
