--- a/true_roots/index.html
+++ b/true_roots/index.html
@@ -69,6 +69,7 @@
             </div>
         </section>
     </main>
+    <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i class="fa-solid fa-circle-arrow-up"></i>Top</button>
     <footer class="container-fluid">
         <div>
             <p class="foot">
