--- a/true_roots/menu.html
+++ b/true_roots/menu.html
@@ -56,14 +56,30 @@
             </div>
         </nav>
     </header>
-
-    <div class="shop" id="shop">
-
+<div class="listino">
+    <h3>Listino</h3>
+    <ul class="nav nav-pills justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link" href="#pizza">Pizza</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#panini">Panini</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#orientale">Orientale</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#bevande">Bevande</a>
+          </li>
+      </ul>
+</div>
+    
+    <div class=" shop" id="shop">
 
     </div>
-
     <section id="prenota">
-        <h5>Contattaci per prenotare un tavolo. Ti contatteremo al più presto per confermare la disponibilità.
+        <h5>Contattaci per prenotare un tavolo. Ti contatteremo al più presto per confermare la
+            disponibilità.
         </h5>
         <form action="#" method="post" class="p-3 p-md-4">
             <div class="form-row">
@@ -101,38 +117,41 @@
                 <button type="button" class="btn btn-primary">Invia</button>
             </div>
         </form>
-    <footer class="container-fluid">
-        <div>
-            <p class="foot">
-                Strada Provinciale 52, Km 2<br />
-                70024 Gravina in Puglia (BA)<br />
-                <a href="tel:3898956550" class="addr"><i class="fa-solid fa-phone"></i>Chiamaci!</a><br />
-                <a href="mailto:#>" class="addr"><i class="fa-solid fa-envelope"></i>Inviaci una e-mail!</a><br />
-                Partita IVA:
-                <!--inserire partita IVA-->
-            </p>
-            <div class="nav">
-                <a href="#" class="nav-item"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#" class="nav-item"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="nav-item"><i class="fa-brands fa-twitter"></i></a>
+        <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i class="fa-solid fa-circle-arrow-up"></i>Top</button>
+        <footer class="container-fluid">
+            <div>
+                <p class="foot">
+                    Strada Provinciale 52, Km 2<br />
+                    70024 Gravina in Puglia (BA)<br />
+                    <a href="tel:3898956550" class="addr"><i class="fa-solid fa-phone"></i>Chiamaci!</a><br />
+                    <a href="mailto:#>" class="addr"><i class="fa-solid fa-envelope"></i>Inviaci una
+                        e-mail!</a><br />
+                    Partita IVA:
+                    <!--inserire partita IVA-->
+                </p>
+                <div class="nav">
+                    <a href="#" class="nav-item"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#" class="nav-item"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" class="nav-item"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+                <div class="copyright">
+                    <i class="fa-regular fa-copyright foot"></i><span class="foot">Elisabetta Carrara
+                        2022</span>
+                </div>
             </div>
-            <div class="copyright">
-                <i class="fa-regular fa-copyright foot"></i><span class="foot">Elisabetta Carrara 2022</span>
-            </div>
-        </div>
-    </footer>
-    <!--SCRIPTS-->
-    <script src="./assets/js/Data.js"></script>
-    <script src="./assets/js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-        crossorigin="anonymous"></script>
+        </footer>
+        <!--SCRIPTS-->
+        <script src="./assets/js/Data.js"></script>
+        <script src="./assets/js/main.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+            integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
