--- a/true_roots/cart.html
+++ b/true_roots/cart.html
@@ -2,99 +2,102 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Roboto+Mono:wght@400;700&display=swap"
-        rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a50d413671.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
-    <title>True Roots</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Roboto+Mono:wght@400;700&display=swap"
+                rel="stylesheet">
+        <script src="https://kit.fontawesome.com/a50d413671.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+                integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+                crossorigin="anonymous">
+        <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+        <title>True Roots</title>
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#">
-                <img src="./assets/img/PlaceHolder.png" width="30" height="30" class="d-inline-block align-top"
-                    alt="logo">
-                True Roots
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="menu.html">Menu</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="cart.html">
-                            <div class="cart">
-                                <i class="fa-solid fa-cart-shopping"></i>
-                                <div id="cartAmount" class="cartAmount">0</div>
-                            </div>
+        <header>
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                        <a class="navbar-brand" href="#">
+                                <img src="./assets/img/logonobkg150.png" class="logo d-inline-block align-top"
+                                        alt="logo">
                         </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="chi-siamo.html">Chi Siamo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contatti.html">Contatti</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <main>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav ml-auto">
+                                        <li class="nav-item active">
+                                                <a class="nav-link" href="index.html">Home <span
+                                                                class="sr-only">(current)</span></a>
+                                        </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" href="menu.html">Menu</a>
+                                        </li>
+                                        <li class="nav-item">
+                                                <a href="cart.html">
+                                                        <div class="cart">
+                                                                <i class="fa-solid fa-cart-shopping"></i>
+                                                                <div id="cartAmount" class="cartAmount">0</div>
+                                                        </div>
+                                                </a>
+                                        </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" href="chi-siamo.html">Chi Siamo</a>
+                                        </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" href="contatti.html">Contatti</a>
+                                        </li>
+                                </ul>
+                        </div>
+                </nav>
+        </header>
         <div id="label" class="text-center"></div>
 
         <div class="shopping-cart" id="shopping-cart"></div>
 
+        <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i
+                        class="fa-solid fa-circle-arrow-up"></i>Top</button>
         <footer class="container-fluid">
-            <div>
-                <p class="foot">
-                    Strada Provinciale 52, Km 2<br />
-                    70024 Gravina in Puglia (BA)<br />
-                    <a href="tel:3898956550" class="addr"><i class="fa-solid fa-phone"></i>Chiamaci!</a><br />
-                    <a href="mailto:#>" class="addr"><i class="fa-solid fa-envelope"></i>Inviaci una e-mail!</a><br />
-                    Partita IVA:
-                    <!--inserire partita IVA-->
-                </p>
-                <div class="nav">
-                    <a href="#" class="nav-item"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#" class="nav-item"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="nav-item"><i class="fa-brands fa-twitter"></i></a>
+                <div>
+                        <p class="foot">
+                                Strada Provinciale 52, Km 2<br />
+                                70024 Gravina in Puglia (BA)<br />
+                                <a href="tel:3898956550" class="addr"><i
+                                                class="fa-solid fa-phone"></i>Chiamaci!</a><br />
+                                <a href="mailto:#>" class="addr"><i class="fa-solid fa-envelope"></i>Inviaci una
+                                        e-mail!</a><br />
+                                Partita IVA:
+                                <!--inserire partita IVA-->
+                        </p>
+                        <div class="nav">
+                                <a href="#" class="nav-item"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="#" class="nav-item"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="#" class="nav-item"><i class="fa-brands fa-twitter"></i></a>
+                        </div>
+                        <div class="copyright">
+                                <i class="fa-regular fa-copyright foot"></i><span class="foot">Elisabetta Carrara
+                                        2022</span>
+                        </div>
                 </div>
-                <div class="copyright">
-                    <i class="fa-regular fa-copyright foot"></i><span class="foot">Elisabetta Carrara 2022</span>
-                </div>
-            </div>
-            <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i
-                    class="fa-solid fa-circle-arrow-up"></i>Top</button>
         </footer>
         <!--SCRIPTS-->
         <script src="./assets/js/Data.js"></script>
         <script src="./assets/js/cart.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-            crossorigin="anonymous"></script>
+                integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+                crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-            integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-            crossorigin="anonymous"></script>
+                integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
