--- a/true_roots/chi-siamo.html
+++ b/true_roots/chi-siamo.html
@@ -21,9 +21,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">
-                <img src="./assets/img/PlaceHolder.png" width="30" height="30" class="d-inline-block align-top"
+                    <img src="./assets/img/logonobkg150.png" class="logo d-inline-block align-top"
                     alt="logo">
-                True Roots
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,23 +55,19 @@
             </div>
         </nav>
     </header>
-    <main>
-        <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i
-                class="fa-solid fa-circle-arrow-up"></i>Top</button>
-        <section class="jumbotron chi-siamo">
-            <div class="about">
-                <h1 class="display-4">True Roots</h1>
-                <p class="lead">Passione per la buona cucina</p>
-                <p>
-                    Tradizione e passione sono i valori portanti della nostra cucina. Visita la pagina del Menu per
-                    prenotare un tavolo o ordinare a domicilio.
-                </p>
-                <div>
-                    <a class="btn btn-primary btn-lg" href="menu.html" role="button">Menu</a>
-                </div>
-
+    <section class="jumbotron">
+        <div class="about">
+            <h1 class="display-4">True Roots</h1>
+            <p class="lead">Passione per la buona cucina</p>
+            <p>
+                Tradizione e passione sono i valori portanti della nostra cucina. Visita la pagina del Menu per
+                prenotare un tavolo o ordinare a domicilio.
+            </p>
+            <div>
+                <a class="btn btn-primary btn-lg" href="menu.html" role="button">Menu</a>
             </div>
-        </section>
+        </div>
+    </section>
         <section class="features">
             <!--sezione con descrizione delle peculiarità del locale-->
             <div class="card-deck">
@@ -104,14 +99,16 @@
                 temporibus reiciendis nobis repellat, vitae non facilis impedit ratione unde corporis quod, voluptatibus
                 minima laboriosam.</p>
         </section>
-    </main>
+        <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i
+            class="fa-solid fa-circle-arrow-up"></i>Top</button>
     <footer class="container-fluid">
         <div>
             <p class="foot">
                 Strada Provinciale 52, Km 2<br />
                 70024 Gravina in Puglia (BA)<br />
                 <a href="tel:3898956550" class="addr"><i class="fa-solid fa-phone"></i>Chiamaci!</a><br />
-                <a href="mailto:#>" class="addr"><i class="fa-solid fa-envelope"></i>Inviaci una e-mail!</a><br />
+                <a href="mailto:#>" class="addr"><i class="fa-solid fa-envelope"></i>Inviaci una
+                    e-mail!</a><br />
                 Partita IVA:
                 <!--inserire partita IVA-->
             </p>
@@ -121,11 +118,15 @@
                 <a href="#" class="nav-item"><i class="fa-brands fa-twitter"></i></a>
             </div>
             <div class="copyright">
-                <i class="fa-regular fa-copyright foot"></i><span class="foot">Elisabetta Carrara 2022</span>
+                <i class="fa-regular fa-copyright foot"></i><span class="foot">Elisabetta Carrara
+                    2022</span>
             </div>
         </div>
     </footer>
     <!--SCRIPTS-->
+    <script src="./assets/js/Data.js"></script>
+    <script src="./assets/js/cart.js"></script>
+    <script src="./assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
