--- a/true_roots/contatti.html
+++ b/true_roots/contatti.html
@@ -21,9 +21,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">
-                <img src="./assets/img/PlaceHolder.png" width="30" height="30" class="d-inline-block align-top"
+                    <img src="./assets/img/logonobkg150.png" class="logo d-inline-block align-top"
                     alt="logo">
-                True Roots
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +55,6 @@
             </div>
         </nav>
     </header>
-    <main>
         <div class="container-fluid contattaci">
             <h5>Dove Siamo</h5>
             <div class="map-responsive">
@@ -90,15 +88,16 @@
                 </div>
             </form>
         </div>
-    </main>
-    <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i class="fa-solid fa-circle-arrow-up"></i>Top</button>
+        <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i
+            class="fa-solid fa-circle-arrow-up"></i>Top</button>
     <footer class="container-fluid">
         <div>
             <p class="foot">
                 Strada Provinciale 52, Km 2<br />
                 70024 Gravina in Puglia (BA)<br />
                 <a href="tel:3898956550" class="addr"><i class="fa-solid fa-phone"></i>Chiamaci!</a><br />
-                <a href="mailto:#>" class="addr"><i class="fa-solid fa-envelope"></i>Inviaci una e-mail!</a><br />
+                <a href="mailto:#>" class="addr"><i class="fa-solid fa-envelope"></i>Inviaci una
+                    e-mail!</a><br />
                 Partita IVA:
                 <!--inserire partita IVA-->
             </p>
@@ -108,11 +107,15 @@
                 <a href="#" class="nav-item"><i class="fa-brands fa-twitter"></i></a>
             </div>
             <div class="copyright">
-                <i class="fa-regular fa-copyright foot"></i><span class="foot">Elisabetta Carrara 2022</span>
+                <i class="fa-regular fa-copyright foot"></i><span class="foot">Elisabetta Carrara
+                    2022</span>
             </div>
         </div>
     </footer>
     <!--SCRIPTS-->
+    <script src="./assets/js/Data.js"></script>
+    <script src="./assets/js/cart.js"></script>
+    <script src="./assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
