--- a/true_roots/menu.html
+++ b/true_roots/menu.html
@@ -21,9 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">
-                <img src="./assets/img/PlaceHolder.png" width="30" height="30" class="d-inline-block align-top"
-                    alt="logo">
-                True Roots
+                <img src="./assets/img/logonobkg150.png" class="logo d-inline-block align-top" alt="logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,24 +54,25 @@
             </div>
         </nav>
     </header>
-<div class="listino">
-    <h3>Listino</h3>
-    <ul class="nav nav-pills justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link" href="#pizza">Pizza</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#panini">Panini</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#orientale">Orientale</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#bevande">Bevande</a>
-          </li>
-      </ul>
-</div>
-    
+
+    <div class="listino">
+        <h3>Listino</h3>
+        <ul class="nav nav-pills justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link" href="#pizza">Pizza</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#panini">Panini</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#orientale">Orientale</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#bevande">Bevande</a>
+            </li>
+        </ul>
+    </div>
+
     <div class=" shop" id="shop">
 
     </div>
@@ -117,7 +116,8 @@
                 <button type="button" class="btn btn-primary">Invia</button>
             </div>
         </form>
-        <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i class="fa-solid fa-circle-arrow-up"></i>Top</button>
+        <button onclick="topFunction()" id="myBtn" title="Go to top" class="btn"><i
+                class="fa-solid fa-circle-arrow-up"></i>Top</button>
         <footer class="container-fluid">
             <div>
                 <p class="foot">
