--- a/true_roots/contatti.html
+++ b/true_roots/contatti.html
@@ -64,7 +64,7 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <h5>Contattaci</h5>
-            <form action="#" method="post" role="form" class="p-3 p-md-4">
+            <form action="form-generale.php" method="post" role="form" class="p-3 p-md-4">
                 <div class="row">
                     <div class="col-xl-6 form-group">
                         <label for="name">Nome</label>
