--- a/true_roots/menu.html
+++ b/true_roots/menu.html
@@ -80,7 +80,7 @@
         <h5>Contattaci per prenotare un tavolo. Ti contatteremo al più presto per confermare la
             disponibilità.
         </h5>
-        <form action="#" method="post" class="p-3 p-md-4">
+        <form action="prenota.php" method="post" class="p-3 p-md-4">
             <div class="form-row">
                 <div class="col-lg-4 col-md-6 form-group">
                     <label for="name">Nome</label>
